--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,17 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap')
+    
 //  1. Config files and helpers
-
+@import abstracts/colors
+@import abstracts/type
 
 
 // 2. Vendor
-
+@import vendor/normalize
 
 
 // 3. Base styles
-
+@import base/base
 
 
 // 4. Layout
-
+@import layout/grid
 
 
 // 5. Components
