--- a/css/main.css
+++ b/css/main.css
@@ -196,9 +196,14 @@ body {
   align-items: center;
   justify-content: center;
   background: hsl(204, 43%, 93%);
+  padding: 5em;
   font-size: 16px;
   font-family: "Karla", sans-serif;
   font-weight: 400;
+}
+
+h2 {
+  font-size: 1.1em;
 }
 
 .grid {
@@ -206,12 +211,11 @@ body {
   align-self: center;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  max-width: 800px;
-  box-shadow: 0 0 10px 0 gray;
+  max-width: 635px;
 }
 
 .join, .sub, .why {
-  padding: 2em;
+  padding: 2.5em;
 }
 
 .join {
@@ -224,13 +228,78 @@ body {
   color: hsl(179, 62%, 43%);
 }
 .join h2 {
-  font-size: 1.2em;
   color: hsl(71, 73%, 54%);
+  padding: 1.4em 0 0.7em;
 }
 .join p {
+  line-height: 1.6em;
   color: hsl(218, 22%, 67%);
 }
 
+.sub {
+  display: flex;
+  flex-direction: column;
+  background: hsl(179, 62%, 43%);
+  color: white;
+  border-radius: 0 0 0 10px;
+}
+.sub .monthly {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+  padding: 1.2em 0 0.5em;
+}
+.sub .monthly .price {
+  font-size: 2em;
+}
+.sub .monthly p {
+  color: hsl(218, 22%, 67%);
+}
+.sub .btn {
+  color: white;
+  text-decoration: none;
+  background: hsl(71, 73%, 54%);
+  text-align: center;
+  margin-top: 1.8em;
+  padding: 0.9em 0;
+  border-radius: 5px;
+  box-shadow: 0 5px 30px 0 gray;
+}
+
+.why {
+  background: hsl(179.48, 47.15%, 51.76%);
+  color: white;
+  border-radius: 0 0 10px 0;
+}
+.why h2 {
+  padding-bottom: 1em;
+}
 .why ul {
+  font-size: 14px;
   list-style: none;
+  line-height: 1.4em;
+}
+
+@media screen and (max-width: 35em) {
+  body {
+    font-size: 14px;
+    padding: 2em;
+    height: 100%;
+  }
+  .grid {
+    display: flex;
+    flex-direction: column;
+  }
+  .join, .sub, .why {
+    padding: 1.5em;
+  }
+  .join {
+    padding-bottom: 2em;
+  }
+  .sub {
+    border-radius: 0;
+  }
+  .why {
+    border-radius: 0 0 10px 10px;
+  }
 }/*# sourceMappingURL=main.css.map */
