--- a/sass/abstracts/_colors.sass
+++ b/sass/abstracts/_colors.sass
@@ -1,4 +1,5 @@
 $cyan: hsl(179, 62%, 43%)
+$light-cyan: hsl(179.48,47.15%,51.76%)
 $bright-yellow: hsl(71, 73%, 54%)
 $light-gray: hsl(204, 43%, 93%)
 $grayish-blue: hsl(218, 22%, 67%)
