--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -4,6 +4,12 @@ body
     align-items: center
     justify-content: center
     background: $light-gray
+    padding: 5em
     font-size: 16px
     font-family: "Karla", sans-serif
     font-weight: $font-regular
+
+h2
+    font-size: 1.1em
+    
+    
